force-app/main/default/objects/LAD_Return__c/LAD_Return__c.object-meta.xml
<CustomObject>
    <description>This Object Stores all the info of the Returned Order</description>
    <label>Return</label>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Return Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>