force-app/main/default/objects/LAD_Return__c/fields/LAD_Account__c.field-meta.xml
<CustomField>
    <fullName>LAD_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores Account Info</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Returns</relationshipLabel>
    <relationshipName>Returns</relationshipName>
    <type>Lookup</type>
</CustomField>