force-app/main/default/objects/LAD_Return__c/fields/LAD_Original_Order__c.field-meta.xml
<CustomField>
    <fullName>LAD_Original_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores Order Info</description>
    <label>Original Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Returns</relationshipLabel>
    <relationshipName>Returns</relationshipName>
    <type>Lookup</type>
</CustomField>