force-app/main/default/objects/LAD_Return__c/fields/LAD_Original_Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>LAD_Original_Order_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the original order summary</description>
    <label>Original Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>Returns</relationshipLabel>
    <relationshipName>Returns</relationshipName>
    <type>Lookup</type>
</CustomField>