force-app/main/default/objects/LAD_Return__c/fields/LAD_Status__c.field-meta.xml
<CustomField>
    <fullName>LAD_Status__c</fullName>
    <description>This Fields is used to store Status of the Returned Order</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Return Submitted</fullName>
                <default>true</default>
                <label>Return Submitted</label>
            </value>
            <value>
                <fullName>Awaiting Inspection</fullName>
            </value>
            <value>
                <fullName>Return Accepted</fullName>
            </value>
            <value>
                <fullName>Return Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>