force-app/main/default/objects/LAD_Return__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAD_Account__c</columns>
    <columns>LAD_Original_Order_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>